2006-02-06 [colin]	2.0.0cvs21

	* src/imap.c
		Put the added file directly to cache if possible (will work
		with next libetpan)
	* src/filtering.c
	* src/filtering.h
	* src/inc.c
	* src/folder.c
	* src/mbox.c
	* src/procmsg.h
		Move and copy filtered messages by batches instead of one
		by one - faster on IMAP
	* src/procmsg.c
		Add a function that'll possibly be useful later

2006-02-06 [colin]	2.0.0cvs20

	* src/addressbook.c
		Use internal mime-type instead of text/plain for d'n'd
	* src/compose.c
		Allow attaching files from mimeview's icon list via d'n'd
	* src/folderview.c
	* src/folderview.h
		Use internal mime-type instead of text/plain for d'n'd
		Don't try to selected opened folder if none is
		Factorize d'n'd from other apps code
	* src/headerview.c
	* src/textview.c
	* src/gtk/gtkutils.c
	* src/gtk/gtkutils.h
		Factorize Face/X-Face stuff
	* src/mimeview.c
		Fix d'n'd to other apps
	* src/prefs_message.c
		Let the XFace pref be usable without libcompface as it also
		applies to Face
	* src/summaryview.c
		Fix d'n'd to other apps
		Factorize d'n'd from other apps code

2006-02-06 [wwp]	2.0.0cvs19

	* po/it.po
		Italian translation fixes by Andrea Spadaccini (no more confusion
		between filtering and processing, and few changes in the About
		dialog).


2006-02-06 [mones]	2.0.0cvs18

	* src/gtk/icon_legend.c
		Improved descriptions allowing better translations

2006-02-05 [colin]	2.0.0cvs17

	* src/imap.c
		Add the f*cking missing expunge that caused imap_fetch_env
		to fail after an add_msgs ! :-///
	* src/etpan/imap-thread.c
		Add a bit of debug

2006-02-05 [colin]	2.0.0cvs16

	* src/common/utils.c
		Don't check for return-path (or we can't put
		back non-sent mails)

2006-02-05 [colin]	2.0.0cvs15

	* src/textview.c
		Don't try to display Face header in textview
		when teh headerview's active

2006-02-05 [colin]	2.0.0cvs14

	* tools/tbird2syl.py
	* tools/Makefile.am
		Add script to import Thunderbird mails

2006-02-05 [colin]	2.0.0cvs13
