@@ -1205,3 +1205,4 @@
 ( cvs diff -u -r 1.34.2.16 -r 1.34.2.17 po/it.po;  ) > 2.0.0cvs19.patchset
 ( cvs diff -u -r 1.60.2.47 -r 1.60.2.48 src/addressbook.c;  cvs diff -u -r 1.382.2.234 -r 1.382.2.235 src/compose.c;  cvs diff -u -r 1.207.2.87 -r 1.207.2.88 src/folderview.c;  cvs diff -u -r 1.20.2.10 -r 1.20.2.11 src/folderview.h;  cvs diff -u -r 1.8.2.14 -r 1.8.2.15 src/headerview.c;  cvs diff -u -r 1.96.2.93 -r 1.96.2.94 src/textview.c;  cvs diff -u -r 1.83.2.63 -r 1.83.2.64 src/mimeview.c;  cvs diff -u -r 1.1.2.10 -r 1.1.2.11 src/prefs_message.c;  cvs diff -u -r 1.395.2.163 -r 1.395.2.164 src/summaryview.c;  cvs diff -u -r 1.5.2.19 -r 1.5.2.20 src/gtk/gtkutils.c;  cvs diff -u -r 1.4.2.16 -r 1.4.2.17 src/gtk/gtkutils.h;  ) > 2.0.0cvs20.patchset
 ( cvs diff -u -r 1.179.2.91 -r 1.179.2.92 src/imap.c;  cvs diff -u -r 1.60.2.9 -r 1.60.2.10 src/filtering.c;  cvs diff -u -r 1.21.2.4 -r 1.21.2.5 src/filtering.h;  cvs diff -u -r 1.149.2.42 -r 1.149.2.43 src/inc.c;  cvs diff -u -r 1.213.2.78 -r 1.213.2.79 src/folder.c;  cvs diff -u -r 1.28.2.12 -r 1.28.2.13 src/mbox.c;  cvs diff -u -r 1.150.2.50 -r 1.150.2.51 src/procmsg.c; cvs diff -u -r 1.60.2.21 -r 1.60.2.22 src/procmsg.h; ) > 2.0.0cvs21.patchset
+( cvs diff -u -r 1.12.2.29 -r 1.12.2.30 src/action.c;  cvs diff -u -r 1.60.2.10 -r 1.60.2.11 src/filtering.c;  cvs diff -u -r 1.21.2.5 -r 1.21.2.6 src/filtering.h;  cvs diff -u -r 1.213.2.79 -r 1.213.2.80 src/folder.c;  cvs diff -u -r 1.395.2.164 -r 1.395.2.165 src/summaryview.c;  ) > 2.0.0cvs22.patchset
